--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+  <style>
+            body{
+                background-color:rgb(255, 198, 10);}
+              </style>
   <body>
     Buenos días chicos!!
     <p>This is the initial page</p>
